050-regulated-aks/Students/Resources/workload/a0005-o/microservice-a/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: microservice-a
  labels:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: microservice-a
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: a0005
      app.kubernetes.io/component: microservice-a
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        # From a0005-i/web-frontend
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: a0005
              pci-scope: in-scope
          podSelector:
            matchLabels:
              app.kubernetes.io/name: a0005
              app.kubernetes.io/component: web-frontend
      ports:
        - port: web
          protocol: TCP
  egress:
    - ports:
        # For our service mesh proxy to talk to its xDS controller
        - port: 15128
          protocol: TCP
    - to:
        # To microservice-b (same namespace)
        - podSelector: 
            matchLabels:
              app.kubernetes.io/name: a0005
              app.kubernetes.io/component: microservice-b
      ports:
        - port: web
          protocol: TCP
    - to: 
        # Allow outbound internet traffic to 443. (NSG and Azure Firewall will be final arbitrator on connection access.)
        # Supports the expected network request to https://packages.microsoft.com
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
          protocol: TCP
